<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:text="@string/gui_text"
        android:textSize="30dp"/>


    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_weight="1"
        android:text="@string/click_here"/>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_weight="1"
        android:text="@string/check_this_out"/>


    <ImageButton
        android:id="@+id/image_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_weight="1"
        android:src="@drawable/flag"/>

    <Switch
        android:id="@+id/switch_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="1"
        android:layout_weight="1"
        android:text="@string/switch_on_off"/>


    <EditText
        android:id="@+id/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:hint="@string/type_here"
        android:inputType="textPersonName"/>
</GridLayout>